refactor de dtos e intento de implementacion session-per-request